--- a/GreenBridge/greenbridge/src/Pages/Home/Home.css
+++ b/GreenBridge/greenbridge/src/Pages/Home/Home.css
@@ -8,12 +8,13 @@
    box-sizing: border-box;
 }
 
-body {
+/* body {
    font-family: 'Montserrat', sans-serif;
    background-color: #f5f5f5;
    color: #333;
-   overflow-y: auto; /* Allow vertical scrolling */
-}
+   overflow-y: auto; 
+}/* Allow vertical scrolling */
+
 
 .container {
    width: 90%;
