--- a/GreenBridge/greenbridge/src/Pages/Home/LandingPage.css
+++ b/GreenBridge/greenbridge/src/Pages/Home/LandingPage.css
@@ -8,12 +8,12 @@
     box-sizing: border-box;
 }
 
-body {
+/* body {
     font-family: 'Montserrat', sans-serif;
     background-color: #f8f9fa;
     color: #333;
     line-height: 1.6;
-}
+} */
 
 a {
     text-decoration: none;
