--- a/GreenBridge/greenbridge/src/Pages/Dashboard/Products/product.css
+++ b/GreenBridge/greenbridge/src/Pages/Dashboard/Products/product.css
@@ -31,7 +31,7 @@
 /* Filter Sidebar Styling */
 .filter-sidebar {
   width: 250px; /* Fixed width for the sidebar */
-  background-color: #1a1a1a;
+  background-color: #06c83d;
   padding: 20px;
   border-radius: 12px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
