--- a/GreenBridge/greenbridge/src/components/Navbar.css
+++ b/GreenBridge/greenbridge/src/components/Navbar.css
@@ -115,7 +115,7 @@ header {
     position: relative; /* Needed for search icon positioning */
 }
 
-.search-input {
+.search-inputs {
     padding: 0.5em 2.5em 0.5em 1.2em;
     border: 1px solid #ccc;
     border-radius: 20px;
