--- a/GreenBridge/greenbridge/src/Pages/Dashboard/Products/product.css
+++ b/GreenBridge/greenbridge/src/Pages/Dashboard/Products/product.css
@@ -1,4 +1,4 @@
-/* Luxury Font */
+
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&family=Poppins:wght@300;400&display=swap');
 
 * {
@@ -8,9 +8,10 @@
 }
 
 .product-page {
-  padding: 40px;
-  max-width: 1300px;
+  /* padding: 40px; */
+  /* max-width: 1300px; */
   margin: 0 auto;
+  margin-top: 100px;
 }
 
 .page-title {
@@ -22,30 +23,18 @@
   letter-spacing: 1px;
 }
 
-/* Main Content Layout */
+
 .main-content {
   display: flex; 
   justify-content: space-between;
 }
 
-/* Filter Sidebar Styling */
-.filter-sidebar {
-  width: 250px; /* Fixed width for the sidebar */
-  background-color: #06c83d;
-  padding: 20px;
-  border-radius: 12px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-  position: fixed; /* Fix the sidebar to the left */
-  top: 7rem; /* Add a gap from the top */
-  left: 0; /* Align it to the left edge */
-  height: calc(100vh - 40px); /* Full viewport height minus padding */
-  overflow-y: auto; /* Enable scrolling inside the sidebar if content overflows */
-  z-index: 999; /* Ensure the sidebar is above other content */
-}
+
+
 
 .main-contents {
   display: flex;
-  margin-left: 280px; /* Add margin to the right of the fixed sidebar to avoid overlap */
+ 
 }
 
 .product-display {
@@ -81,7 +70,7 @@
   background-color: #e6e6e6;
 }
 
-/* Product Display Section */
+
 .product-displays {
   flex: 1;
 }
@@ -172,15 +161,15 @@
   background-color: #c7001d;
 }
 
-/* Responsive Design */
+
 @media (max-width: 768px) {
   .main-content {
-    flex-direction: column; /* Stack sidebar and product display on smaller screens */
+    flex-direction: column;
   }
 
   .filter-sidebar {
     margin-bottom: 20px;
-    width: 100%; /* Full width for the sidebar on smaller screens */
+    width: 100%; 
   }
 
   .product-display {
